# repak

./: Cargo.toml  TODO.md
doc/: REPAK.md
examples/assets/: README.md  manifest.json  teapot.fbx
examples/repak_from_json/: main.rs
src/: checksum.rs  compress.rs  encrypt.rs  io.rs  lib.rs
